[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "seqeas"
version = "1.0"
authors = [
  { name="Tobias Köhne", email="47008700+tobiscode@users.noreply.github.com" },
]
description = "Sequence of Earthquakes and Aseismic Slip"
readme = "README.md"
license = { file="LICENSE" }
requires-python = "<3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://github.com/tobiscode/seqeas-public"
"Bug Tracker" = "https://github.com/tobiscode/seqeas-public/issues"
